[gd_scene load_steps=28 format=4 uid="uid://dtnbtye4emcmy"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_46rsf"]
[ext_resource type="PackedScene" uid="uid://btpihtycl3g2b" path="res://scenes/Tiles/Caminos.tscn" id="1_drp86"]
[ext_resource type="PackedScene" uid="uid://dv3ulosdpgjy5" path="res://scenes/Tiles/bordes.tscn" id="2_tno3r"]
[ext_resource type="PackedScene" uid="uid://b5g3ujpptwsxn" path="res://scenes/Tiles/shadows.tscn" id="2_yfity"]
[ext_resource type="PackedScene" uid="uid://b20exm863hm14" path="res://scenes/Torres/tower_placement.tscn" id="5_82lj8"]
[ext_resource type="Script" path="res://scripts/ronda_1_5.gd" id="5_c4y42"]
[ext_resource type="PackedScene" uid="uid://cco3bw3i185mr" path="res://scenes/Enemigos/EnemigoTNT.tscn" id="6_t1bw3"]
[ext_resource type="PackedScene" uid="uid://yokdxhuasapq" path="res://scenes/GUI/tower_ui.tscn" id="6_t1pva"]
[ext_resource type="PackedScene" uid="uid://h6h30pdd24i8" path="res://scenes/Enemigos/enemigo_dinamita.tscn" id="7_64yx6"]
[ext_resource type="PackedScene" uid="uid://4b2nv0tp1trp" path="res://scenes/Enemigos/enemigo_antorcha.tscn" id="8_frqrs"]
[ext_resource type="Texture2D" uid="uid://cho7qrotecsff" path="res://assets/GUI/Others/InterfazRondas.png" id="11_5jslm"]
[ext_resource type="Texture2D" uid="uid://bak8r4y7j8dge" path="res://assets/GUI/DefaultDisplay.png" id="20_qwc6f"]
[ext_resource type="PackedScene" uid="uid://brbvheo0vuljk" path="res://scenes/Tiles/Arboles.tscn" id="20_rvm6e"]
[ext_resource type="Texture2D" uid="uid://c7dbtv1n53nv4" path="res://assets/GUI/Time.png" id="21_6aera"]
[ext_resource type="Texture2D" uid="uid://dogs6is6icd2e" path="res://assets/Factions/Knights/Buildings/House/House_Blue.png" id="21_vj3sn"]
[ext_resource type="Texture2D" uid="uid://c7o5nc63q08yr" path="res://assets/Factions/Knights/Buildings/House/House_Construction.png" id="22_md2a7"]
[ext_resource type="Texture2D" uid="uid://buix7gyijqdfu" path="res://assets/Factions/Knights/Buildings/House/House_Destroyed.png" id="23_cude3"]
[ext_resource type="Texture2D" uid="uid://bs4cjx8ln7g6b" path="res://assets/MoreAssets/Sprite-0002.png" id="24_kv4kc"]
[ext_resource type="Texture2D" uid="uid://dvwmflc5jt3jf" path="res://assets/Factions/Knights/Buildings/House/House_Purple.png" id="24_nkq2s"]
[ext_resource type="Script" path="res://scripts/Camara.gd" id="24_wvne7"]
[ext_resource type="Texture2D" uid="uid://0lab6fli1mqq" path="res://assets/GUI/Others/ContornoBarra.png" id="25_cqj0x"]
[ext_resource type="Texture2D" uid="uid://va1a8d6vepef" path="res://assets/Factions/Goblins/Buildings/Wood_House/Goblin_House.png" id="25_eg3wy"]
[ext_resource type="Texture2D" uid="uid://cgmfgamx2lm24" path="res://assets/WorldDecoration/Deco/18.png" id="26_4mu13"]
[ext_resource type="FontFile" uid="uid://c7d0sueupq4is" path="res://assets/prstart.ttf" id="26_ll3bd"]
[ext_resource type="Texture2D" uid="uid://bo74smqthqumr" path="res://assets/GUI/Others/Barra100.png" id="26_sqah8"]
[ext_resource type="PackedScene" uid="uid://cw5lyyy6x15d4" path="res://scenes/GUI/pause_menu.tscn" id="30_k43ve"]
[ext_resource type="Texture2D" uid="uid://dyctctf16o363" path="res://assets/GUI/Others/heart.png" id="31_d55fy"]

[node name="Game" type="Node2D"]
scale = Vector2(1.05343, 0.997905)
script = ExtResource("1_46rsf")

[node name="Tiles" type="Node" parent="."]

[node name="Shadows" parent="Tiles" instance=ExtResource("2_yfity")]
z_index = -15
scale = Vector2(1.05343, 0.997905)

[node name="TileMapLayer" parent="Tiles" instance=ExtResource("1_drp86")]
z_index = -48
scale = Vector2(1.05343, 0.997905)
tile_map_data = PackedByteArray("AAAAAAAAAAABAAEAAAAAAAEAAAABAAEAAAABAAAAAAABAAEAAAABAAEAAAABAAEAAAAAAAIAAAABAAEAAAABAAIAAAABAAEAAAAAAAkAAAABAAEAAAABAAkAAAABAAEAAAAAAAoAAAABAAEAAAABAAoAAAABAAEAAAACAAAAAAABAAEAAAACAAEAAAABAAEAAAADAAAAAAABAAEAAAADAAEAAAABAAEAAAACAAIAAAABAAEAAAADAAIAAAABAAEAAAACAAkAAAABAAEAAAADAAkAAAABAAEAAAACAAoAAAABAAEAAAADAAoAAAABAAEAAAAEAAAAAAABAAEAAAAEAAEAAAABAAEAAAAFAAAAAAABAAEAAAAFAAEAAAABAAEAAAAEAAIAAAABAAEAAAAFAAIAAAABAAEAAAAEAAkAAAABAAEAAAAFAAkAAAABAAEAAAAEAAoAAAABAAEAAAAFAAoAAAABAAEAAAAGAAAAAAABAAEAAAAGAAEAAAABAAEAAAAHAAAAAAABAAEAAAAHAAEAAAABAAEAAAAGAAIAAAABAAEAAAAHAAIAAAABAAEAAAAGAAkAAAABAAEAAAAHAAkAAAAFAAEAAAAGAAoAAAABAAEAAAAHAAoAAAAFAAEAAAAIAAAAAAABAAEAAAAIAAEAAAABAAEAAAAJAAAAAAABAAEAAAAJAAEAAAABAAEAAAAIAAIAAAABAAEAAAAJAAIAAAABAAEAAAAJAAMAAAABAAEAAAAIAAkAAAAHAAEAAAAIAAoAAAAHAAEAAAAKAAAAAAABAAEAAAAKAAEAAAABAAEAAAALAAAAAAABAAEAAAALAAEAAAABAAEAAAAKAAIAAAABAAEAAAAKAAMAAAABAAEAAAALAAIAAAABAAEAAAALAAMAAAABAAEAAAAMAAAAAAABAAEAAAAMAAEAAAABAAEAAAANAAAAAAABAAEAAAANAAEAAAABAAEAAAAMAAIAAAABAAEAAAAMAAMAAAABAAEAAAANAAIAAAABAAEAAAANAAMAAAABAAEAAAAOAAAAAAABAAEAAAAOAAEAAAABAAEAAAAPAAAAAAABAAEAAAAPAAEAAAABAAEAAAAOAAIAAAABAAEAAAAOAAMAAAABAAEAAAAPAAIAAAABAAEAAAAPAAMAAAABAAEAAAAQAAAAAAABAAEAAAAQAAEAAAABAAEAAAARAAAAAAABAAEAAAARAAEAAAABAAEAAAAQAAIAAAABAAEAAAAQAAMAAAAFAAAAAAARAAIAAAABAAEAAAARAAMAAAAGAAAAAAARAAQAAAAGAAEAAAARAAUAAAAHAAEAAAARAAYAAAAHAAEAAAARAAcAAAAHAAEAAAARAAgAAAAHAAEAAAARAAkAAAAHAAEAAAARAAoAAAAHAAEAAAASAAAAAAABAAEAAAASAAEAAAABAAEAAAATAAAAAAABAAEAAAATAAEAAAABAAEAAAASAAIAAAABAAEAAAASAAMAAAAGAAAAAAATAAIAAAABAAEAAAATAAMAAAAGAAAAAAASAAQAAAAGAAIAAAASAAUAAAABAAEAAAATAAQAAAAGAAIAAAATAAUAAAABAAEAAAASAAYAAAABAAEAAAASAAcAAAABAAEAAAATAAYAAAABAAEAAAATAAcAAAABAAEAAAASAAgAAAABAAEAAAASAAkAAAABAAEAAAATAAgAAAABAAEAAAATAAkAAAABAAEAAAASAAoAAAABAAEAAAATAAoAAAABAAEAAAAUAAAAAAABAAEAAAAUAAEAAAABAAEAAAAVAAAAAAABAAEAAAAVAAEAAAABAAEAAAAUAAIAAAABAAEAAAAUAAMAAAAGAAAAAAAVAAIAAAABAAEAAAAVAAMAAAAGAAAAAAAUAAQAAAAGAAIAAAAUAAUAAAABAAEAAAAVAAQAAAAGAAIAAAAVAAUAAAABAAEAAAAUAAYAAAABAAEAAAAUAAcAAAABAAEAAAAVAAYAAAABAAEAAAAVAAcAAAABAAEAAAAUAAgAAAABAAEAAAAUAAkAAAABAAEAAAAVAAgAAAABAAEAAAAVAAkAAAABAAEAAAAUAAoAAAABAAEAAAAVAAoAAAABAAEAAAAWAAAAAAABAAEAAAAWAAEAAAABAAEAAAAXAAAAAAABAAEAAAAXAAEAAAABAAEAAAAWAAIAAAABAAEAAAAWAAMAAAAGAAAAAAAXAAIAAAABAAEAAAAXAAMAAAAGAAAAAAAWAAQAAAAGAAIAAAAWAAUAAAABAAEAAAAXAAQAAAAGAAIAAAAXAAUAAAABAAEAAAAWAAYAAAABAAEAAAAWAAcAAAABAAEAAAAXAAYAAAABAAEAAAAXAAcAAAABAAEAAAAWAAgAAAABAAEAAAAWAAkAAAABAAEAAAAXAAgAAAABAAEAAAAXAAkAAAABAAEAAAAWAAoAAAABAAEAAAAXAAoAAAABAAEAAAAYAAAAAAABAAEAAAAYAAEAAAABAAEAAAAZAAAAAAABAAEAAAAZAAEAAAABAAEAAAAYAAIAAAABAAEAAAAYAAMAAAAGAAAAAAAZAAIAAAABAAEAAAAZAAMAAAAGAAAAAAAYAAUAAAABAAEAAAAZAAUAAAAFAAEAAAAYAAYAAAABAAEAAAAYAAcAAAABAAEAAAAYAAgAAAABAAEAAAAYAAkAAAABAAEAAAAYAAoAAAABAAEAAAAaAAAAAAABAAEAAAAaAAEAAAABAAEAAAAbAAAAAAABAAEAAAAbAAEAAAABAAEAAAAaAAIAAAABAAEAAAAaAAMAAAAHAAAAAAAbAAIAAAABAAEAAAAbAAMAAAABAAEAAAAaAAQAAAAHAAEAAAAaAAUAAAAHAAEAAAAbAAQAAAABAAEAAAAbAAUAAAABAAEAAAAbAAoAAAAGAAAAAAAcAAAAAAABAAEAAAAcAAEAAAABAAEAAAAcAAIAAAABAAEAAAAcAAMAAAABAAEAAAAcAAQAAAABAAEAAAAcAAUAAAABAAEAAAAcAAoAAAAGAAAAAAAAAAsAAAABAAEAAAAAAAwAAAABAAEAAAAAAA0AAAABAAEAAAAAAA4AAAABAAEAAAAAAA8AAAABAAEAAAAAABAAAAABAAEAAAABAAsAAAABAAEAAAABAAwAAAABAAEAAAABAA0AAAABAAEAAAABAA4AAAABAAEAAAABAA8AAAABAAEAAAABABAAAAABAAEAAAACAAsAAAABAAEAAAACAAwAAAABAAEAAAACAA0AAAABAAEAAAACAA4AAAABAAEAAAACAA8AAAABAAEAAAACABAAAAABAAEAAAADAAsAAAABAAEAAAADAAwAAAABAAEAAAADAA0AAAABAAEAAAADAA4AAAABAAEAAAADAA8AAAABAAEAAAADABAAAAABAAEAAAAEAAsAAAABAAEAAAAEAAwAAAABAAEAAAAEAA0AAAABAAEAAAAEAA4AAAABAAEAAAAEAA8AAAABAAEAAAAEABAAAAABAAEAAAAFAAsAAAABAAEAAAAFAAwAAAABAAEAAAAFAA0AAAABAAEAAAAFAA4AAAABAAEAAAAFAA8AAAABAAEAAAAFABAAAAABAAEAAAAGAAsAAAABAAEAAAAGAAwAAAABAAEAAAAGAA0AAAABAAEAAAAGAA4AAAABAAEAAAAGAA8AAAABAAEAAAAGABAAAAABAAEAAAAHAAsAAAAFAAEAAAAHAAwAAAAFAAEAAAAHAA0AAAAFAAEAAAAHAA4AAAAFAAIAAAAHAA8AAAABAAEAAAAHABAAAAABAAEAAAAIAAsAAAAHAAEAAAAIAAwAAAAHAAEAAAAIAA0AAAAGAAEAAAAIAA4AAAAGAAIAAAAIAA8AAAABAAEAAAAIABAAAAABAAEAAAAJAAsAAAABAAEAAAAJAAwAAAABAAEAAAAJAA0AAAAGAAAAAAAJAA4AAAAGAAIAAAAJAA8AAAABAAEAAAAJABAAAAABAAEAAAAKAAsAAAABAAEAAAAKAAwAAAABAAEAAAAKAA0AAAAGAAAAAAAKAA4AAAAGAAIAAAAKAA8AAAABAAEAAAAKABAAAAABAAEAAAALAAsAAAABAAEAAAALAAwAAAABAAEAAAALAA0AAAAGAAAAAAALAA4AAAAGAAIAAAALAA8AAAABAAEAAAALABAAAAABAAEAAAAMAAsAAAABAAEAAAAMAAwAAAABAAEAAAAMAA0AAAAGAAAAAAAMAA4AAAAGAAIAAAAMAA8AAAABAAEAAAAMABAAAAABAAEAAAANAAsAAAABAAEAAAANAAwAAAABAAEAAAANAA0AAAAGAAAAAAANAA4AAAAGAAIAAAANAA8AAAABAAEAAAANABAAAAABAAEAAAAOAAsAAAABAAEAAAAOAAwAAAABAAEAAAAOAA0AAAAGAAAAAAAOAA4AAAAGAAIAAAAOAA8AAAABAAEAAAAOABAAAAABAAEAAAAPAAsAAAABAAEAAAAPAAwAAAABAAEAAAAPAA0AAAAGAAAAAAAPAA4AAAAGAAIAAAAPAA8AAAABAAEAAAAPABAAAAABAAEAAAAQAAsAAAAFAAEAAAAQAAwAAAAFAAEAAAAQAA0AAAAGAAEAAAAQAA4AAAAGAAIAAAAQAA8AAAABAAEAAAAQABAAAAABAAEAAAARAAsAAAAHAAEAAAARAAwAAAAHAAEAAAARAA8AAAABAAEAAAARABAAAAABAAEAAAASAAsAAAABAAEAAAASAAwAAAABAAEAAAASAA8AAAABAAEAAAASABAAAAABAAEAAAATAAsAAAABAAEAAAATAAwAAAABAAEAAAATAA8AAAABAAEAAAATABAAAAABAAEAAAAUAAsAAAABAAEAAAAUAAwAAAABAAEAAAAUAA8AAAABAAEAAAAUABAAAAABAAEAAAAVAAsAAAABAAEAAAAVAAwAAAABAAEAAAAVAA8AAAABAAEAAAAVABAAAAABAAEAAAAWAAsAAAABAAEAAAAWAAwAAAABAAEAAAAWAA8AAAABAAEAAAAWABAAAAABAAEAAAAXAAsAAAABAAEAAAAXAAwAAAABAAEAAAAXAA8AAAABAAEAAAAXABAAAAABAAEAAAAYAAsAAAABAAEAAAAYAAwAAAABAAEAAAAYAA8AAAABAAEAAAAYABAAAAABAAEAAAAZAA8AAAABAAEAAAAZABAAAAABAAEAAAAaAA8AAAABAAEAAAAaABAAAAABAAEAAAAbAAsAAAAGAAIAAAAbAAwAAAABAAEAAAAbAA0AAAABAAEAAAAbAA4AAAABAAEAAAAbAA8AAAABAAEAAAAbABAAAAABAAEAAAAcAAsAAAAGAAIAAAAcAAwAAAABAAEAAAAcAA0AAAABAAEAAAAcAA4AAAABAAEAAAAcAA8AAAABAAEAAAAcABAAAAABAAEAAAAdAAAAAAABAAEAAAAdAAEAAAABAAEAAAAdAAIAAAABAAEAAAAdAAMAAAABAAEAAAAdAAQAAAABAAEAAAAdAAUAAAABAAEAAAAdAAoAAAAGAAAAAAAdAAsAAAAGAAIAAAAdAAwAAAABAAEAAAAdAA0AAAABAAEAAAAdAA4AAAABAAEAAAAdAA8AAAABAAEAAAAdABAAAAABAAEAAAAeAAAAAAABAAEAAAAeAAEAAAABAAEAAAAeAAIAAAABAAEAAAAeAAMAAAABAAEAAAAeAAQAAAABAAEAAAAeAAUAAAABAAEAAAAeAAoAAAAGAAAAAAAeAAsAAAAGAAIAAAAeAAwAAAABAAEAAAAeAA0AAAABAAEAAAAeAA4AAAABAAEAAAAeAA8AAAABAAEAAAAeABAAAAABAAEAAAAfAAAAAAABAAEAAAAfAAEAAAABAAEAAAAfAAIAAAABAAEAAAAfAAMAAAABAAEAAAAfAAQAAAABAAEAAAAfAAUAAAABAAEAAAAfAAoAAAAGAAAAAAAfAAsAAAAGAAIAAAAfAAwAAAABAAEAAAAfAA0AAAABAAEAAAAfAA4AAAABAAEAAAAfAA8AAAABAAEAAAAfABAAAAABAAEAAAAgAAAAAAABAAEAAAAgAAEAAAABAAEAAAAgAAIAAAABAAEAAAAgAAMAAAABAAEAAAAgAAQAAAABAAEAAAAgAAUAAAABAAEAAAAgAAoAAAAGAAAAAAAgAAsAAAAGAAIAAAAgAAwAAAABAAEAAAAgAA0AAAABAAEAAAAgAA4AAAABAAEAAAAgAA8AAAABAAEAAAAgABAAAAABAAEAAAAhAAAAAAABAAEAAAAhAAEAAAABAAEAAAAhAAIAAAABAAEAAAAhAAMAAAABAAEAAAAhAAQAAAABAAEAAAAhAAUAAAABAAEAAAAhAAoAAAAGAAAAAAAhAAsAAAAGAAIAAAAhAAwAAAABAAEAAAAhAA0AAAABAAEAAAAhAA4AAAABAAEAAAAhAA8AAAABAAEAAAAhABAAAAABAAEAAAAiAAAAAAABAAEAAAAiAAEAAAABAAEAAAAiAAIAAAABAAEAAAAiAAMAAAABAAEAAAAiAAQAAAABAAEAAAAiAAUAAAABAAEAAAAiAAoAAAAGAAAAAAAiAAsAAAAGAAIAAAAiAAwAAAABAAEAAAAiAA0AAAABAAEAAAAiAA4AAAABAAEAAAAiAA8AAAABAAEAAAAiABAAAAABAAEAAAAjAAAAAAABAAEAAAAjAAEAAAABAAEAAAAjAAIAAAABAAEAAAAjAAMAAAABAAEAAAAjAAQAAAABAAEAAAAjAAUAAAABAAEAAAAjAAoAAAAGAAAAAAAjAAsAAAAGAAIAAAAjAAwAAAABAAEAAAAjAA0AAAABAAEAAAAjAA4AAAABAAEAAAAjAA8AAAABAAEAAAAjABAAAAABAAEAAAAkAAAAAAABAAEAAAAkAAEAAAABAAEAAAAkAAIAAAABAAEAAAAkAAMAAAABAAEAAAAkAAQAAAABAAEAAAAkAAUAAAABAAEAAAAkAAoAAAAGAAEAAAAkAAsAAAAGAAIAAAAkAAwAAAABAAEAAAAkAA0AAAABAAEAAAAkAA4AAAABAAEAAAAkAA8AAAABAAEAAAAkABAAAAABAAEAAAAlAAAAAAABAAEAAAAlAAEAAAABAAEAAAAlAAIAAAABAAEAAAAlAAMAAAABAAEAAAAlAAQAAAABAAEAAAAlAAUAAAABAAEAAAAlAAYAAAABAAEAAAAlAAcAAAABAAEAAAAlAAgAAAABAAEAAAAlAAkAAAABAAEAAAAlAAoAAAAGAAAAAAAlAAsAAAAGAAIAAAAlAAwAAAABAAEAAAAlAA0AAAABAAEAAAAlAA4AAAABAAEAAAAlAA8AAAABAAEAAAAlABAAAAABAAEAAAAmAAAAAAABAAEAAAAmAAEAAAABAAEAAAAmAAIAAAABAAEAAAAmAAMAAAABAAEAAAAmAAQAAAABAAEAAAAmAAUAAAABAAEAAAAmAAYAAAABAAEAAAAmAAcAAAABAAEAAAAmAAgAAAABAAEAAAAmAAkAAAABAAEAAAAmAAoAAAAGAAAAAAAmAAsAAAAGAAIAAAAmAAwAAAABAAEAAAAmAA0AAAABAAEAAAAmAA4AAAABAAEAAAAmAA8AAAABAAEAAAAmABAAAAABAAEAAAAnAAAAAAABAAEAAAAnAAEAAAABAAEAAAAnAAIAAAABAAEAAAAnAAMAAAABAAEAAAAnAAQAAAABAAEAAAAnAAUAAAABAAEAAAAnAAYAAAABAAEAAAAnAAcAAAABAAEAAAAnAAgAAAABAAEAAAAnAAkAAAABAAEAAAAnAAoAAAAGAAAAAAAnAAsAAAAGAAIAAAAnAAwAAAABAAEAAAAnAA0AAAABAAEAAAAnAA4AAAABAAEAAAAnAA8AAAABAAEAAAAnABAAAAABAAEAAAAoAAAAAAABAAEAAAAoAAEAAAABAAEAAAAoAAIAAAABAAEAAAAoAAMAAAABAAEAAAAoAAQAAAABAAEAAAAoAAUAAAABAAEAAAAoAAYAAAABAAEAAAAoAAcAAAABAAEAAAAoAAgAAAABAAEAAAAoAAkAAAABAAEAAAAoAAoAAAAGAAAAAAAoAAsAAAAGAAIAAAAoAAwAAAABAAEAAAAoAA0AAAABAAEAAAAoAA4AAAABAAEAAAAoAA8AAAABAAEAAAAoABAAAAABAAEAAAApAAAAAAABAAEAAAApAAEAAAABAAEAAAApAAIAAAABAAEAAAApAAMAAAABAAEAAAApAAQAAAABAAEAAAApAAUAAAABAAEAAAApAAYAAAABAAEAAAApAAcAAAABAAEAAAApAAgAAAABAAEAAAApAAkAAAABAAEAAAApAAoAAAAGAAAAAAApAAsAAAAGAAIAAAApAAwAAAABAAEAAAApAA0AAAABAAEAAAApAA4AAAABAAEAAAApAA8AAAABAAEAAAApABAAAAABAAEAAAAqAAAAAAABAAEAAAAqAAEAAAABAAEAAAAqAAIAAAABAAEAAAAqAAMAAAABAAEAAAAqAAQAAAABAAEAAAAqAAUAAAABAAEAAAAqAAYAAAABAAEAAAAqAAcAAAABAAEAAAAqAAgAAAABAAEAAAAqAAkAAAABAAEAAAAqAAoAAAAGAAAAAAAqAAsAAAAGAAIAAAAqAAwAAAABAAEAAAAqAA0AAAABAAEAAAAqAA4AAAABAAEAAAAqAA8AAAABAAEAAAAqABAAAAABAAEAAAArAAAAAAABAAEAAAArAAEAAAABAAEAAAArAAIAAAABAAEAAAArAAMAAAABAAEAAAArAAQAAAABAAEAAAArAAUAAAABAAEAAAArAAYAAAABAAEAAAArAAcAAAABAAEAAAArAAgAAAABAAEAAAArAAkAAAABAAEAAAArAAoAAAAGAAAAAAArAAsAAAAGAAIAAAArAAwAAAABAAEAAAArAA0AAAABAAEAAAArAA4AAAABAAEAAAArAA8AAAABAAEAAAArABAAAAABAAEAAAAsAAAAAAABAAEAAAAsAAEAAAABAAEAAAAsAAIAAAABAAEAAAAsAAMAAAABAAEAAAAsAAQAAAABAAEAAAAsAAUAAAABAAEAAAAsAAYAAAABAAEAAAAsAAcAAAABAAEAAAAsAAgAAAABAAEAAAAsAAkAAAABAAEAAAAsAAoAAAAGAAAAAAAsAAsAAAAGAAIAAAAsAAwAAAABAAEAAAAsAA0AAAABAAEAAAAsAA4AAAABAAEAAAAsAA8AAAABAAEAAAAsABAAAAABAAEAAAAJAAQAAAABAAEAAAAJAAUAAAABAAEAAAAJAAYAAAABAAEAAAAJAAcAAAABAAEAAAAJAAgAAAABAAEAAAAJAAkAAAABAAEAAAAJAAoAAAABAAEAAAAKAAQAAAABAAEAAAAKAAUAAAABAAEAAAAKAAYAAAABAAEAAAAKAAcAAAABAAEAAAAKAAgAAAABAAEAAAAKAAkAAAABAAEAAAAKAAoAAAABAAEAAAALAAQAAAABAAEAAAALAAUAAAABAAEAAAALAAYAAAABAAEAAAALAAcAAAABAAEAAAALAAgAAAABAAEAAAALAAkAAAABAAEAAAALAAoAAAABAAEAAAAMAAQAAAABAAEAAAAMAAUAAAABAAEAAAAMAAYAAAABAAEAAAAMAAcAAAABAAEAAAAMAAgAAAABAAEAAAAMAAkAAAABAAEAAAAMAAoAAAABAAEAAAANAAQAAAABAAEAAAANAAUAAAABAAEAAAANAAYAAAABAAEAAAANAAcAAAABAAEAAAANAAgAAAABAAEAAAANAAkAAAABAAEAAAANAAoAAAABAAEAAAAOAAQAAAABAAEAAAAOAAUAAAABAAEAAAAOAAYAAAABAAEAAAAOAAcAAAABAAEAAAAOAAgAAAABAAEAAAAOAAkAAAABAAEAAAAOAAoAAAABAAEAAAAPAAQAAAABAAEAAAAPAAUAAAABAAEAAAAPAAYAAAABAAEAAAAPAAcAAAABAAEAAAAPAAgAAAABAAEAAAAPAAkAAAABAAEAAAAPAAoAAAABAAEAAAAQAAQAAAAFAAEAAAAQAAUAAAAFAAEAAAAQAAYAAAAFAAEAAAAQAAcAAAAFAAEAAAAQAAgAAAAFAAEAAAAQAAkAAAAFAAEAAAAQAAoAAAAFAAEAAAAAAAgAAAAGAAIAAAABAAgAAAAGAAIAAAACAAgAAAAGAAIAAAADAAgAAAAGAAIAAAAEAAgAAAAGAAIAAAAFAAgAAAAGAAIAAAAGAAgAAAAGAAIAAAAAAAcAAAAGAAAAAAABAAcAAAAGAAAAAAACAAcAAAAGAAAAAAADAAcAAAAGAAAAAAAEAAcAAAAGAAAAAAAFAAcAAAAGAAAAAAAGAAcAAAAGAAAAAAAHAAcAAAAGAAAAAAAIAAcAAAAHAAAAAAAIAAgAAAAHAAEAAAAHAAgAAAAGAAEAAAAAAAMAAAABAAEAAAAAAAQAAAABAAEAAAAAAAUAAAABAAEAAAAAAAYAAAABAAEAAAABAAMAAAABAAEAAAABAAQAAAABAAEAAAABAAUAAAABAAEAAAABAAYAAAABAAEAAAACAAMAAAABAAEAAAACAAQAAAABAAEAAAACAAUAAAABAAEAAAACAAYAAAABAAEAAAADAAMAAAABAAEAAAADAAQAAAABAAEAAAADAAUAAAABAAEAAAADAAYAAAABAAEAAAAEAAMAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAAEAAYAAAABAAEAAAAFAAMAAAABAAEAAAAFAAQAAAABAAEAAAAFAAUAAAABAAEAAAAFAAYAAAABAAEAAAAGAAMAAAABAAEAAAAGAAQAAAABAAEAAAAGAAUAAAABAAEAAAAGAAYAAAABAAEAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAABAAEAAAAHAAYAAAABAAEAAAAIAAMAAAABAAEAAAAIAAQAAAABAAEAAAAIAAUAAAABAAEAAAAIAAYAAAABAAEAAAARAA4AAAAHAAIAAAARAA0AAAAHAAEAAAAYAAQAAAAGAAIAAAAZAAQAAAAGAAEAAAAZAAYAAAAFAAEAAAAZAAcAAAAFAAEAAAAZAAgAAAAFAAEAAAAZAAkAAAAFAAEAAAAZAAoAAAAFAAEAAAAaAAYAAAAHAAEAAAAaAAcAAAAHAAEAAAAaAAgAAAAHAAEAAAAaAAkAAAAHAAEAAAAZAAsAAAAFAAIAAAAaAAsAAAAGAAIAAAAaAAoAAAAGAAEAAAASAA0AAAABAAEAAAASAA4AAAABAAEAAAATAA0AAAABAAEAAAATAA4AAAABAAEAAAAUAA0AAAABAAEAAAAUAA4AAAABAAEAAAAVAA0AAAABAAEAAAAVAA4AAAABAAEAAAAWAA0AAAABAAEAAAAWAA4AAAABAAEAAAAXAA0AAAABAAEAAAAXAA4AAAABAAEAAAAYAA0AAAABAAEAAAAYAA4AAAABAAEAAAAZAA0AAAABAAEAAAAZAA4AAAABAAEAAAAaAA0AAAABAAEAAAAaAA4AAAABAAEAAAAZAAwAAAABAAEAAAAaAAwAAAABAAEAAAAbAAYAAAABAAEAAAAbAAcAAAABAAEAAAAbAAgAAAABAAEAAAAbAAkAAAABAAEAAAAcAAYAAAABAAEAAAAcAAcAAAABAAEAAAAcAAgAAAABAAEAAAAcAAkAAAABAAEAAAAdAAYAAAABAAEAAAAdAAcAAAABAAEAAAAdAAgAAAABAAEAAAAdAAkAAAABAAEAAAAeAAYAAAABAAEAAAAeAAcAAAABAAEAAAAeAAgAAAABAAEAAAAeAAkAAAABAAEAAAAfAAYAAAABAAEAAAAfAAcAAAABAAEAAAAfAAgAAAABAAEAAAAfAAkAAAABAAEAAAAgAAYAAAABAAEAAAAgAAcAAAABAAEAAAAgAAgAAAABAAEAAAAgAAkAAAABAAEAAAAhAAYAAAABAAEAAAAhAAcAAAABAAEAAAAhAAgAAAABAAEAAAAhAAkAAAABAAEAAAAiAAYAAAABAAEAAAAiAAcAAAABAAEAAAAiAAgAAAABAAEAAAAiAAkAAAABAAEAAAAjAAYAAAABAAEAAAAjAAcAAAABAAEAAAAjAAgAAAABAAEAAAAjAAkAAAABAAEAAAAkAAYAAAABAAEAAAAkAAcAAAABAAEAAAAkAAgAAAABAAEAAAAkAAkAAAABAAEAAAA=")

[node name="TileMapLayer2" parent="Tiles" instance=ExtResource("2_tno3r")]
z_index = -47
scale = Vector2(1.05343, 0.997905)

[node name="PonerTorres" type="Node" parent="."]

[node name="TowerPlacement5" parent="PonerTorres" instance=ExtResource("5_82lj8")]
position = Vector2(848, 736)

[node name="TowerPlacement6" parent="PonerTorres" instance=ExtResource("5_82lj8")]
position = Vector2(1592, 400)

[node name="TowerPlacement4" parent="PonerTorres" instance=ExtResource("5_82lj8")]
position = Vector2(2784, 536)

[node name="TowerPlacement" parent="PonerTorres" instance=ExtResource("5_82lj8")]
position = Vector2(1920, 856)

[node name="TowerPlacement2" parent="PonerTorres" instance=ExtResource("5_82lj8")]
position = Vector2(1320, 400)

[node name="TowerPlacement3" parent="PonerTorres" instance=ExtResource("5_82lj8")]
position = Vector2(384, 664)

[node name="TowerUI" parent="." instance=ExtResource("6_t1pva")]
visible = false

[node name="Rondas" type="Node" parent="."]

[node name="Ronda 1-5" type="Timer" parent="Rondas"]
wait_time = 60.0
autostart = true
script = ExtResource("5_c4y42")
enemigo1 = ExtResource("7_64yx6")
enemigo2 = ExtResource("8_frqrs")
enemigo3 = ExtResource("6_t1bw3")

[node name="Enemigo1" type="Timer" parent="Rondas/Ronda 1-5"]
autostart = true

[node name="Enemigo2" type="Timer" parent="Rondas/Ronda 1-5"]
wait_time = 30.0
autostart = true

[node name="Enemigo3" type="Timer" parent="Rondas/Ronda 1-5"]
wait_time = 45.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(911.309, 569.192)
limit_left = 0
limit_top = 0
limit_right = 3032
limit_bottom = 1080
script = ExtResource("24_wvne7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Labels" type="Node" parent="CanvasLayer"]

[node name="Label" type="Label" parent="CanvasLayer/Labels"]
z_index = 21
offset_left = 1756.0
offset_top = 53.0
offset_right = 1884.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("26_ll3bd")
theme_override_font_sizes/font_size = 32
text = "1:00
"
horizontal_alignment = 2

[node name="Vida" type="Label" parent="CanvasLayer/Labels"]
z_index = 50
offset_left = 1555.25
offset_top = 47.25
offset_right = 1651.25
offset_bottom = 79.25
theme_override_colors/font_color = Color(0.665124, 0.140949, 0.16027, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("26_ll3bd")
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 2

[node name="Ronda" type="Label" parent="CanvasLayer/Labels"]
visible = false
offset_left = 1608.0
offset_top = 104.0
offset_right = 1888.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("26_ll3bd")
theme_override_font_sizes/font_size = 40
text = "Ronda 1"

[node name="Sprites" type="Node" parent="CanvasLayer"]

[node name="DefaultDisplay3" type="Sprite2D" parent="CanvasLayer/Sprites"]
position = Vector2(1577.25, 64.25)
scale = Vector2(1.11111, 1)
texture = ExtResource("20_qwc6f")

[node name="InterfazRondas" type="Sprite2D" parent="CanvasLayer/Sprites"]
visible = false
z_index = 20
position = Vector2(240, 1016)
scale = Vector2(1.7, 1.393)
texture = ExtResource("11_5jslm")

[node name="Heart" type="Sprite2D" parent="CanvasLayer/Sprites"]
z_index = 50
position = Vector2(1528.25, 65.25)
scale = Vector2(4.03126, 4.15625)
texture = ExtResource("31_d55fy")

[node name="DefaultDisplay" type="Sprite2D" parent="CanvasLayer/Sprites"]
position = Vector2(1788, 69)
scale = Vector2(1.5, 1.5)
texture = ExtResource("20_qwc6f")

[node name="Time" type="Sprite2D" parent="CanvasLayer/Sprites"]
z_index = 10
position = Vector2(1722, 66)
scale = Vector2(1.5, 1.5)
texture = ExtResource("21_6aera")

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
visible = false
z_index = 100
offset_left = 8.0
offset_top = 600.0
offset_right = 32.0
offset_bottom = 602.0
scale = Vector2(10, 10)
nine_patch_stretch = true
texture_under = ExtResource("24_kv4kc")
texture_over = ExtResource("25_cqj0x")
texture_progress = ExtResource("26_sqah8")

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("30_k43ve")]
z_index = 100
offset_top = 8.0
offset_bottom = 8.0

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.346577, 0.280009, 1)
theme_override_font_sizes/font_size = 50
text = "Game Over"

[node name="Decoracion" type="Node" parent="."]

[node name="Arboles" type="Node" parent="Decoracion"]

[node name="Arbol4" parent="Decoracion/Arboles" instance=ExtResource("20_rvm6e")]
position = Vector2(2424, 184)

[node name="Arbol" parent="Decoracion/Arboles" instance=ExtResource("20_rvm6e")]
position = Vector2(2048, 104)

[node name="Arbol2" parent="Decoracion/Arboles" instance=ExtResource("20_rvm6e")]
position = Vector2(2264, 856)

[node name="Arbol3" parent="Decoracion/Arboles" instance=ExtResource("20_rvm6e")]
position = Vector2(1856, 8)

[node name="Arbol5" parent="Decoracion/Arboles" instance=ExtResource("20_rvm6e")]
position = Vector2(688, 136)

[node name="Arbol6" parent="Decoracion/Arboles" instance=ExtResource("20_rvm6e")]
position = Vector2(320, 80)

[node name="Arbol7" parent="Decoracion/Arboles" instance=ExtResource("20_rvm6e")]
position = Vector2(80, 312)

[node name="Arbol8" parent="Decoracion/Arboles" instance=ExtResource("20_rvm6e")]
position = Vector2(1168, 56)

[node name="Arbol9" parent="Decoracion/Arboles" instance=ExtResource("20_rvm6e")]
position = Vector2(1088, 64)

[node name="Arbol10" parent="Decoracion/Arboles" instance=ExtResource("20_rvm6e")]
position = Vector2(1248, 72)

[node name="Casas" type="Node" parent="Decoracion"]

[node name="HouseBlue" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(1936, 208)
scale = Vector2(1.05343, 0.997905)
texture = ExtResource("21_vj3sn")

[node name="HouseBlue2" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(2320, 64)
scale = Vector2(1.05343, 0.997905)
texture = ExtResource("21_vj3sn")

[node name="HouseBlue3" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(2664, 176)
texture = ExtResource("21_vj3sn")

[node name="HouseConstruction" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(2384, 936)
texture = ExtResource("22_md2a7")

[node name="HouseDestroyed" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(2504, 936)
texture = ExtResource("23_cude3")

[node name="HouseBlue7" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(2456, 816)
texture = ExtResource("21_vj3sn")

[node name="HousePurple" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(2744, 960)
texture = ExtResource("24_nkq2s")

[node name="HouseConstruction2" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(80, 784)
texture = ExtResource("22_md2a7")

[node name="HouseDestroyed2" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(80, 784)
texture = ExtResource("23_cude3")

[node name="HouseConstruction3" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(176, 728)
texture = ExtResource("22_md2a7")

[node name="HouseDestroyed3" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(280, 184)
texture = ExtResource("23_cude3")

[node name="HouseConstruction4" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(160, 864)
texture = ExtResource("22_md2a7")

[node name="HouseDestroyed4" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(160, 864)
texture = ExtResource("23_cude3")

[node name="HousePurple2" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(88, 632)
texture = ExtResource("24_nkq2s")

[node name="HouseBlue4" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(448, 88)
scale = Vector2(1.05343, 0.997905)
texture = ExtResource("21_vj3sn")

[node name="HousePurple3" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(144, 144)
scale = Vector2(1.05343, 0.997905)
texture = ExtResource("24_nkq2s")

[node name="HouseBlue5" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(72, 968)
scale = Vector2(1.05343, 0.997905)
texture = ExtResource("21_vj3sn")

[node name="GoblinHouse" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(2184, 272)
scale = Vector2(1.05343, 0.997905)
texture = ExtResource("25_eg3wy")

[node name="GoblinHouse2" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(1712, 64)
scale = Vector2(1.05343, 0.997905)
texture = ExtResource("25_eg3wy")

[node name="GoblinHouse3" type="Sprite2D" parent="Decoracion/Casas"]
position = Vector2(2664, 832)
scale = Vector2(1.05343, 0.997905)
texture = ExtResource("25_eg3wy")

[node name="18" type="Sprite2D" parent="."]
position = Vector2(235.421, 929.948)
texture = ExtResource("26_4mu13")

[connection signal="timeout" from="Rondas/Ronda 1-5" to="Rondas/Ronda 1-5" method="_on_timeout"]
[connection signal="timeout" from="Rondas/Ronda 1-5/Enemigo1" to="Rondas/Ronda 1-5" method="_on_enemigo_1_timeout"]
[connection signal="timeout" from="Rondas/Ronda 1-5/Enemigo2" to="Rondas/Ronda 1-5" method="_on_enemigo_2_timeout"]
[connection signal="timeout" from="Rondas/Ronda 1-5/Enemigo3" to="Rondas/Ronda 1-5" method="_on_enemigo_3_timeout"]
